# knexus-mdm-hackathon-2026

./: .gitignore  CLAUDE_NOVEL_APPROACH.md  Dockerfile  LICENSE  README.md  SPEC.md  data_sources.md  main.py  presentation_strategy.md  pyproject.toml
agent/: main.py
frontend/: .gitignore  AGENTS.md  describe_alerts.js  get_alerts.js  list_tables.js  list_tables_fixed.js  list_tables_v2.js  message-render-prompt.md  next.config.mjs  notes  package-lock.json  package.json  test_db.js
frontend/.pi/: settings.json
frontend/src/app/: actions.js  page.js
frontend/src/app/api/repair/[sr_number]/: route.js
frontend/src/app/reports/: page.jsx
frontend/src/components/: repair-info.jsx  sidebar-layout.jsx  sidebar.jsx
frontend/src/db/: connection.js  database.sqlite  demo-adapter.js
gcss-mc/: AGENT.md  init_system_alerts.py  load_data.py  pi-session-2026-04-29T06-02-46-041Z_019dd7d5-2f98-72bd-99d9-0f64c59f5271.html  rnsn_labels.csv  tamcn_labels.csv
gcss-mc/raw-source/: due_in_data_dict.csv  sr_header_dict.csv  sr_repair_part_dict.csv
notebooks/: gcss_mc_dataset.ipynb  scania_dataset_eda.ipynb
src/mdm-hackathon-2026/: main.py
src/mdm-hackathon-2026/database/: database.py  models.py  schemas.py
