[project]
name = "mdm-hackathon-2026"
version = "0.1.0"
authors = [
    { name = "Dj Streat", email = "dj.streat@knexus.ai" },
    { name = "Michael Fermin", email = "michael.fermin2@gmail.com" },
    { name = "Adam Ahmed", email = "adam.ahmed@knexus.ai" },
    { name = "Kevin Raoofi", email = "kevin.raoofi@knexus.ai" },
    { name = "Max Clive", email = "max.clive@knexus.ai" },
]
description = "MDM Hackathon 2026"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.8",
    "google-genai>=1.31.0",
    "jupyterlab",
    "uvicorn>=0.41.0",
    "pydantic-ai-slim[spec]>=1.74.0",
]

# [project.scripts]
# start = "app.main:main"

[tool.uv]
keyring-provider = "subprocess"
