[project]
name = "knexus-mdm-hackathon-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.3",
    "pydantic-ai>=1.87.0",
]

[dependency-groups]
notebook = [
    "ipykernel>=7.2.0",
    "marimo>=0.23.3",
    "polars>=1.40.1",
]
